# job-tracker

./: .env.example  .gitignore  .mcp.json  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PROJECT_CONTEXT.md  README.md  TODO.md  alembic.ini  build.sh  docker-compose.yml  docker-entrypoint.sh  job-tracker  job_applications.db  requirements.txt  run.sh  setup_alembic.sh  start-uvicorn.sh  start.sh
.github/workflows/: ci.yml
alembic/: env.py
docs/: BULK_JOB_SCORING_PROMPT.md  DATA_DIRECTORY_CONFIG.md  DUA_EXPORT.md  MCP_SERVER.md  RESUME_CUSTOMIZATION_PROMPT.md  RESUME_REVIEW_PROMPT.md  SETUP.md  SHELL_ALIASES.md  TROUBLESHOOTING.md  WORKFLOW_SUMMARY.md  mcp-http-migration.md
example_data/: README.md
job_tracker/: CHANGELOG.md  OFFERS_README.md  __init__.py  app.py  create_app_db_entry.py  crud.py  database.py  linkedin_parser.py  models.py  scoring.py
job_tracker/static/: app.js  interviews.js  offers.js  style.css
job_tracker/templates/: index.html
mcp-server/: Cargo.toml
mcp-server/src/: main.rs
scripts/: add_pdf_metadata.py  compile_application.sh  create_application.sh  customize_application.sh  export_weekly_activity.py  fix_company_names.py  generate_resume.sh  list_applications.sh  read_pdf_metadata.py  run_demo.sh  run_tracker.sh  seed_demo_data.py  sqlite_shell.sh  sync_applications.py  sync_applications.sh
templates/: README.md
